<resources>
    <string name="common_wait_tips">Wait&#8230;</string>
    <string name="common_btn_upgrade">Upgrade</string>
    <string name="common_done">Done!</string>
    <string name="common_failed">Failed!</string>
    <string name="common_downloading">Upgrade</string>
    <string name="common_btn_yes">YES</string>
    <string name="common_btn_no">NO</string>
    <string name="action_search">Search</string>
    <string name="action_contacts">My contacts</string>
    <string name="fragment_title_gantlemen">Gentlemen</string>
    <string name="fragment_title_my_favortes">My favorites</string>
    <string name="fragment_title_my_albums">My albums</string>
    <string name="fragment_title_more">More</string>
    <string name="x_years_old">%s Years old</string>
    <string name="loading">Loading&#8230;</string>
    <string name="processing">Processing&#8230;</string>
    <string name="retry">Retry</string>
    <string name="no_more_items">No more items.</string>
    <string name="no_items">No items</string>
    <string name="Videos">Videos</string>
    <string name="Photos">Photos</string>
    <string name="photo_album">Photo album</string>
    <string name="video_album">Video album</string>
    <string name="create_album">Create Album</string>
    <string name="edit_album">Edit album</string>
    <string name="album_name">Album name</string>
    <string name="describe_you_photo">Describe your photo</string>
    <string name="describe_you_video">Describe your video</string>
    <string name="album_description">Album description</string>
    <string name="photo_browser">Browser a photo</string>
    <string name="video_browser">Browser a video</string>
    <string name="upload_photo">Upload photo</string>
    <string name="upload_video">Upload video</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="go">Go</string>
    <string name="please_enter_member_id">Please enter member Id</string>
    <string name="not_titled">Not titled</string>
    <string name="items_require_your_action">Require you action</string>
    <string name="items">Items</string>
    <string name="select_album_type">Select album type</string>
    <string name="submit">Submit</string>
    <string name="submiting">Submitting</string>
    <string name="delete_album">Delete album</string>
    <string name="under_review">Under review</string>
    <string name="approved">Approved</string>
    <string name="edition_required">Edition required</string>
    <string name="rejected">Rejected</string>
    <string name="seconds">Seconds</string>
    <string name="english_letter_and_space_onley_between_12_to_25_characters">English letters and space only, between 12 to 25 characters.</string>
    <string name="this_video_maybe_corrupted_or_is_malformed_please_choose_another_video">This video maybe corrupt or is malformed, please choose another video.</string>
    <string name="photo_description_re_edition_user_message">Your photo description does not meet our content policy, please edit and submit again.</string>
    <string name="video_description_re_edition_user_message">Your video description or video thumbnail does not meet our content policy, please edit and submit again.</string>
    <string name="your_photo_description_has_not_been_changed_yet">Your photo description has not been changed yet.</string>
    <string name="this_item_did_not_successfully_uploaded">This item did not successfully uploaded.</string>
    <string name="length_of_the_video_should_be_between_8_15_seconds_please_choose_another_video">Length of the video should be between 8 &#8211; 15 seconds, please choose another video.</string>
    <string name="the_video_resolution_must_be_heigher_than_720px_please_choose_another_video">The video resolution must be higher than 720 pixels, please choose another video.</string>
    <string name="the_video_thumbnail_resolution_must_be_heigher_than_720px_please_choose_another_photo">The video thumbnail resolution must be higher than 720 pixels, please choose another photo.</string>
    <string name="the_photo_resolution_must_be_heigher_than_800px_please_choose_another_photo">The photo resolution must be higher than %s pixels, please choose another photo.</string>
    <string name="the_photo_resolution_too_large">The photo resolution is too large, please choose another photo.</string>
    <string name="the_photo_type_must_be_jpg">The photo format must be JPG.</string>
    <string name="your_video_description_has_not_been_changed_yet">Your video description has not been changed yet.</string>
    <string name="text_editor">Text editor</string>
	<string name="require_at_least_x_characters">Require at least %s characters.</string>
	<string name="you_did_not_make_any_changes_to_the_text_yet">You did not make any changes to the text yet.</string>
	<string name="incorrect_format">Incorrect format.</string>
	<string name="add_new_template">Add new template</string>
	<string name="this_message_template_is_under_review">This template is under review.</string>
	<string name="this_message_template_is_rejected">This template is rejected.</string>
	<string name="this_message_template_is_approved">This template is approved.</string>
	<string name="type_your_template_here">Type your template here</string>
	<string name="failed_to_submit_template_would_you_like_to_retry">Failed to submit template, would you like to retry?</string>
	<string name="delete_custom_template_confirm_tips">Are you sure you wish to delete this template?</string>
    <string name="change_password">Change password</string>
	<string name="Language">Language</string>
	<string name="notification_sound">Notification sound</string>
	<string name="clean_cache">Clean cache</string>
	<string name="check_update">Check update</string>
	<string name="version">Version %s</string>
	<string name="contact_agency">Contact agency</string>
	<string name="on">On</string>
	<string name="off">Off</string>
	<string name="optional">Optional</string>
    <string name="online">Online</string>
    <string name="all">All</string>
    <string name="recent_visitors">Recent visitors</string>
    <string name="outging_invitation">Outgoing invitation</string>
    <string name="invitation_template">Invitation templates</string>
    <string name="chat">Chat</string>
    <string name="search_criteria">Search criteria</string>
    <string name="country">Country</string>
    <string name="search">Search</string>
    <string name="search_by_id">Search by ID</string>
    <string name="member_id">Member ID</string>
    <string name="with_photo">With photo</string>
    <string name="system_templates">System templates</string>
    <string name="personal_templeates">Personal templates</string>
    <string name="profile_id_x_not_found">Profile ID %s not found.</string>
    <string name="search_man_not_match">No man match the condition.</string>
    <string name="no_recent_visitors">No recent visitors.</string>
    <string name="no_online_members_at_the_moment">No online members at the moment.</string>
    <string name="your_favorite_list_is_empty">Your favorite list is empty.</string>
    <string name="profile_id">Profile ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logining">Loging in&#8230;</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="personal_template_list_null">No custom templates now.</string>
    <string name="system_template_list_null">No system templates now.</string>
    <string name="outing_invite_list_null">You have not sent any invitation yet.</string>
    <string name="livechat_contact_list_null">Your contact list is empty.</string>
    <string name="livechat_contact_search_null">No results.</string>
    <string name="album_gridview_detail_photo_title">Photo title</string>
    <string name="album_add_photo">Add Photo</string>
    <string name="album_add_video">Add Video</string>
    <string name="album_no_photo">This album is empty.</string>
    <string name="album_no_video">This album is empty.</string>
    <string name="album_delete_dialog">Can\'t not delete an album which contains photos or videos.</string>
    <string name="album_list_error">Something happened.Please try again later.</string>
    <string name="album_creating">Creating</string>
    <string name="album_edit_processing">Processing</string>
    <string name="album_deleting">Deleting</string>
    <string name="album_create_edit_error_existed">Album name is used, please choose another name.</string>
    <string name="album_create_normal_error">Error occurred. Please try again later.</string>
    <string name="album_edit_normal_error">Error occurred. Please try again later.</string>
    <string name="album_delete_normal_error">Error occurred. Please try again later.</string>
    <string name="album_photolist_update_error">Error occurred, please to refresh.</string>
    <string name="album_videolist_update_error">Error occurred, please refresh again.</string>
    <string name="album_photo_summitting">Submitting</string>
    <string name="album_photo_over_thirty_error">Failed. Album is full (30 items).</string>
    <string name="album_photo_no_permission_error">Failed uploading your photo. Please contact your agency.</string>
    <string name="album_photo_existed_error">Failed uploading your photo, please do not upload duplicated photos.</string>
    <string name="album_photo_normal_error">Troubles occurred. Would you like to try again?</string>
    <string name="album_photo_eidt_notexist_error">Could not edit this photo, it maybe deleted.</string>
    <string name="album_photo_size_or_format_error">The photo is too large or the width/height is too long.</string>
    <string name="album_photo_edit_status_error">Could not edit this photo, it maybe deleted.</string>
    <string name="album_video_upload_tips">%s is uploading. You can check the notification bar to get the progress.</string>
    <string name="album_video_upload_overflow_failed">Failed uploading \"%s\", album is full.</string>
    <string name="album_video_upload_thumb_exist_failed">Failed uploading \"%s\", duplicated video cover.</string>
    <string name="album_video_upload_video_exist_failed">Failed uploading \"%s\", duplicated video.</string>
    <string name="album_video_upload_thumb_format_failed">Failed uploading \"%s\", check your video cover.</string>
    <string name="album_video_upload_normal_failed">Failed uploading \"%s\". Retry?</string>
    <string name="album_video_upload_success_notify">Successfully uploaded \"%s\".</string>
    <string name="album_video_uploading_notify">Uploading \"%s\"</string>
    <string name="album_video_edit_thumb_exist_failed">Failed, cover photo already exists.</string>
    <string name="album_video_edit_thumb_format_failed">Failed, cover photo must be jpg and size must be between 720px and 1080px.</string>
    <string name="album_video_edit_video_notexist_failed">Failed. Video not exists.</string>
    <string name="album_video_edit_status_error">The video status is rejested.</string>
    <string name="album_video_edit_normal_failed">Failed. Would you like to retry?</string>
    <string name="album_video_preview_not_exist">This video is being processed. Can\'t play now, please try again later.</string>
    <string name="livechat_voice_record">Hold to\nSpeak</string>
    <string name="livechat_voice_record_tips">00:00</string>
    <string name="livechat_voice_record_payment">0.3 credits for each voice message sent.</string>
    <string name="more_apk_download_notification">Downloading…</string>
    <string name="required">Required</string>
</resources>