<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >
        
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="left|center"
            android:paddingLeft="16dp"
            android:text="@string/search_criteria"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Age"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewMin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="72dp"
                android:gravity="center_vertical"
                android:text="18"
                android:textColor="@color/text_color_light"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/layoutAge"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@id/textViewMin"
                android:gravity="center"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/textViewMax"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/layoutAge"
                android:gravity="center_vertical"
                android:text="99"
                android:textColor="@color/text_color_light"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >
"

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/country"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/selectCountry"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:background="@drawable/touch_feedback_round_border_white"
                android:drawableRight="@drawable/ic_expand_more_grey600_24dp"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/all"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/withPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="88dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="16dp"
            android:text="@string/with_photo"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp" />

        <com.qpidnetwork.ladydating.customized.view.MaterialRaisedButton
            android:id="@+id/buttonSearch"
            style="@style/Button.WhiteButton.Flat"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/search" />
        
        </LinearLayout>
		
		<View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/listview_divider_grey"/>
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_weight="0" >

            <TextView
                android:id="@+id/search_by_id_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="left|center"
                android:text="@string/search_by_id"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp" />

            <com.qpidnetwork.ladydating.customized.view.MaterialEditText
                android:id="@+id/idTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/member_id"
                android:layout_weight="1" />

            <com.qpidnetwork.ladydating.customized.view.MaterialRaisedButton
                android:id="@+id/buttonGo"
                style="@style/Button.WhiteButton.Flat"
                android:layout_width="48dp"
                android:layout_marginLeft="16dp"
                android:text="@string/go" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/rectangle_grey_shawdow" />

</LinearLayout>