<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/editionMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/touch_feedback_holo_light"
        android:padding="24dp"
        android:text="@string/photo_description_re_edition_user_message"
        android:textColor="@color/text_color_dark"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editionMessage"
        android:orientation="vertical"
        android:padding="24dp" >

        <TextView
            android:id="@+id/albumName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp" />

        <com.qpidnetwork.ladydating.customized.view.MaterialEditText
            android:id="@+id/photoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/describe_you_photo"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/photoViewContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/photo"
                android:textColor="@color/text_color_dark"
                android:textSize="14sp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp" >
                
<!--                 android:background="@drawable/rectangle_stroke_blue" -->

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/touch_feedback_holo_light"
                    android:clickable="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add_grey600_48dp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/required"
                android:textColor="@color/text_color_light"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
