<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/editionMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/touch_feedback_holo_light"
        android:padding="24dp"
        android:text="@string/photo_description_re_edition_user_message"
        android:textColor="@color/text_color_dark"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editionMessage"
        android:orientation="vertical"
        android:padding="24dp" >

        <TextView
            android:id="@+id/albumName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="album name"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp" />

        <com.qpidnetwork.ladydating.customized.view.MaterialEditText
            android:id="@+id/videoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/describe_you_video"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal" >

            <LinearLayout android:id="@+id/videoViewContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="16dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/video"
                    android:textColor="@color/text_color_dark"
                    android:textSize="14sp" />

                
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_stroke_blue"
                    android:padding="1dp" >

                    <ImageView
                        android:id="@+id/video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/touch_feedback_holo_light"
                        android:scaleType="center"
                        android:src="@drawable/ic_add_grey600_48dp"
                        android:clickable="true" />
                    
                    <TextView android:id="@+id/durationView"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:background="#86000000"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:padding="4dp"/>
                </RelativeLayout>
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/required"
                    android:textColor="@color/text_color_light"
                    android:textSize="14sp" />
                
                
            </LinearLayout>

            <LinearLayout android:id="@+id/thumbViewContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/thumbnail"
                    android:textColor="@color/text_color_dark"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_stroke_blue"
                    android:padding="1dp" >

                    <ImageView
                        android:id="@+id/thumbnial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/touch_feedback_holo_light"
                        android:scaleType="center"
                        android:src="@drawable/ic_add_grey600_48dp"
                        android:clickable="true" />
                </RelativeLayout>

                <TextView android:id="@+id/thumbRequirementDeclare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/optional"
                    android:textColor="@color/text_color_light"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>